# ComfyUI-STARWrapper

./: CLAUDE.md  LICENSE  README.md  __init__.py  color_fix.py  inference_utils.py  install.py  nodes.py  pyproject.toml  requirements.txt  ruff.toml
video_to_video/: video_to_video_model.py
video_to_video/diffusion/: diffusion_sdedit.py  schedules_sdedit.py  solvers_sdedit.py
video_to_video/modules/: __init__.py  embedder.py  t5.py  unet_v2v.py
video_to_video/utils/: config.py  logger.py
workflows/: STAR-example-workflow.json
