[project]
name = "comfyui-starwrapper"
description = "An experimental STAR Video Upscale Wrapper."
version = "0.1.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["accelerate", "av", "opencv-python", "easydict", "einops", "open-clip-torch", "fairscale", "torchsde", "pytorch-lightning", "diffusers[torch]", "huggingface_hub", "numpy<2", "ruff", "transformers", "xformers"]

[project.urls]
Repository = "https://github.com/vjumpkung/ComfyUI-STARWrapper"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/vjumpkung/ComfyUI-STARWrapper/wiki"
"Bug Tracker" = "https://github.com/vjumpkung/ComfyUI-STARWrapper/issues"

[tool.comfy]
PublisherId = "vjumpkung"
DisplayName = "ComfyUI-STARWrapper"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

